<resources>
    <string name="app_name">Kmdk</string>
    <dimen name="app_bar_height">300dp</dimen>
    <dimen name="fab_margin">16dp</dimen>
    <dimen name="text_margin">16dp</dimen>
    <string name="_91">+91</string>
    <string name="number">+91 %s</string>
    <string name="verify_desc">+91 %s எண்ணிற்கு 4 இலக்க குறியீடு அனுப்பப்பட்டுள்ளது. அந்த குறியீட்டை உள்ளிடுக</string>
    <string name="enter_mobile_no">தங்கள் தொலைபேசி எண்ணை உள்ளிடுக</string>
    <string name="edt_hint">தொலைபேசி</string>
    <string name="login">அடுத்து</string>
    <string name="ot_4_digits">4 இலக்க குறியீடு</string>
    <string name="confirm">உறுதி செய்</string>
    <string name="resend">குறியீட்டை மீண்டும் அனுப்புக</string>
    <string name="dialog_title_mobile">பின்வரும் எண்ணை சரிபார்க்கவும்</string>
    <string name="ok">சரி</string>
    <string name="edit">திருத்தவும்</string>
    <string name="homepage">முகப்பு</string>
    <string name="homepages">முகப்பு</string>
    <string name="loading">Loading…</string>
    <string name="alert">Alert</string>
    <string name="permission_msg">Enable Permission in settings to access %s</string>
    <string name="submit">சமர்பிக்கவும்</string>
    <string name="reg_enter_mobile_no">உறுப்பினர் சேர்க்க தங்கள் தொலைபேசி எண்ணை உள்ளிடுக</string>
    <string name="thanks">நன்றி !!</string>
    <string name="thank_u_desc">உங்கள் விவரங்கள் சேமிக்கப்பட்டது, கிளை செயளாலர் உங்களை தொடர்பு கொள்வார். நன்றி !!!</string>
    <string name="title_left">கொங்கும்\nசெழிக்கும்</string>
    <string name="title_right">எங்கும்\nசெழிக்கும்</string>
    <string name="title">முதல் பக்கம்</string>
    <string name="party_title">கொங்குநாடு மக்கள்\nதேசிய கட்சி</string>
    <string name="add_member">உறுப்பினர் சேர்க்க</string>
    <string name="search_member">உறுப்பினர் பார்க்க</string>
    <string name="member_form">உறுப்பினர் படிவம்</string>
    <string name="branch_no">கிளை எண்: %s</string>
    <string name="member_name">உறுப்பினர் பெயர்</string>
    <string name="father_name">தகப்பனார்/கணவர் பெயர்</string>
    <string name="dob">பிறந்த தேதி</string>
    <string name="address">முகவரி</string>
    <string name="mobile_no">தொலைபேசி எண்</string>
    <string name="edu_qualification">கல்வி தகுதி </string>
    <string name="education">கல்வி </string>
    <string name="occupation">தொழில்</string>
    <string name="State">நிலை</string>
    <string name="blood_group">இரத்த வகை தேர்வு செய்</string>
    <string name="member_photo">உறுப்பினர் புகைப்படம்</string>
    <string name="preview">முன்னோட்டம் பார்க்க</string>
    <string name="save_member">பட்டியலில் சேர்க்க</string>
    <string name="branch">கிளை</string>
    <string name="union">ஒன்றியம்</string>
    <string name="reason">காரணம்</string>
    <string name="members">உறுப்பினர்கள்</string>
    <string name="reject">நிராகரித்தல்</string>
    <string name="accept">ஒப்புதல்</string>
    <string name="no_members_found">உறுப்பினர்கள் யாரும் இல்லை</string>
    <string name="clon">:</string>
    <string name="blood_group1">இரத்தவகை</string>
    <string name="branch1">கிளை</string>
    <string name="district">மாவட்டம்</string>
    <string name="father_spouse_name">தந்தை/கணவர்</string>
    <string name="name">பெயர்</string>
    <string name="age">வயது</string>
    <string name="ward_no">வார்டு எண் %s</string>
    <string name="district1">%s மாவட்டம்</string>
    <string name="mp_">M.P தொகுதி  - %s</string>
    <string name="mla_">M.L.A தொகுதி - %s</string>
    <string name="taluk">%s தாலுகா</string>
    <string name="regional">%s ஒன்றியம்</string>
    <string name="panchayat">%s பஞ்சாயத்து</string>
    <string name="events">நிகழ்வுகள்</string>
    <string name="weekly_news">வார இதழ்</string>
    <string name="gallery">படங்கள்</string>
    <string name="new_member">புதிய உறுப்பினர்</string>
    <string name="secretary">செயலாளர்கள்</string>
    <string name="secretary1">இளைஞர் பதிவு</string>
    <string name="sec_title">செயலாளர்</string>
    <string name="member_added">உறுப்பினர் பதிவு உறுதி செய்யப்பட்டது</string>
    <string name="fetching_data">தகவல்கள் பெறப்படுகிறது</string>
    <string name="titlr_reason">நிராகரிக்க காரணம்</string>
    <string name="add_extra_member">கூடுதல் உறுப்பினர் சேர்க்க</string>
    <string name="voter_id">வாக்காளர் அட்டை எண்</string>
    <string name="place">இடம்</string>
    <string name="select">தேர்வு செய்யவும் …</string>
    <string name="camera">கேமரா</string>
    <string name="view_members">View Members</string>
    <string name="delete">Delete</string>
    <string name="tab_request">கோரிக்கைகள்</string>
    <string name="tab_members">உறுப்பினர்கள்</string>
    <string name="tab_rejected">நிராகரிக்கப்பட்டவை</string>
    <string name="tab_group">உறுப்பினர் சேர்க்க</string>
    <string name="invalid_mobile">தொலைபேசி என்னை உள்ளீடுக</string>
    <string name="enter_otp">சரியான குறியீட்டை உள்ளீடுக</string>
    <string name="resend_otp">குறியீடு மீண்டும் அனுப்பப்பட்டுள்ளது</string>
    <string name="select_all">அனைத்தையும் தெரிவுசெய்</string>
    <string name="member_details">உறுப்பினர் விபரம்</string>
    <string name="no_events">நிகழ்வுகள் சேர்க்கப்படவில்லை</string>
    <string name="no_images">படங்கள் சேர்க்கப்படவில்லை</string>
    <string name="no_news">வார இதழ் சேர்க்கப்படவில்லை</string>
    <string name="coordinator">உறுப்பினர் ஒருங்கிணைப்பாளர்</string>
    <string name="febrary">பிப்ரவரி</string>
    <string name="guest">சிறப்பு விருந்தினர் :</string>
    <string name="complaint">புகார் பதிவு</string>
    <string name="complaints">புகார்கள்</string>
    <string name="joineddate">இ.தேதி</string>
    <string-array name="state">
        <item>தமிழ்நாடு</item>
    </string-array>
    <string name="branch_sec">கிளை செயலாளர்</string>
    <string name="union_sec">ஒன்றிய செயலாளர்</string>
    <string name="district_sec">மாவட்ட செயலாளர்</string>
    <string name="select_mobile_no">ஏதேனும் ஒரு தொலைபேசி எண்ணை தேர்வு செய்யவும்</string>
    <string name="select_only_ten_members">அதிகபட்சம் 10 பதிவுகளை மட்டும் தேர்வு செய்து ஒப்புதல் அளிக்கவும்</string>
    <string name="weburl">http://52.35.61.202/app/webServ/</string>
    <string name="addressed">அளிக்கப்பட்ட புகார்கள்</string>
    <string name="member_login">உறுப்பினர் உள்நுழைவு</string>
    <string name="downloads">பதிவிரக்கப்பட்டவை</string>
    <string name="logout">வெளியேறு</string>
    <string name="then">மற்றவை</string>
    <string name="contact_admin">நிர்வாகத்தை அணுக</string>
    <string name="website">வளைதளம் பாரக்க</string>
    <string name="describe">விவரிக்கவும்</string>
    <string name="image">புகைப்படம்</string>
    <string name="political">கட்சி </string>
    <string name="advertisements">விளம்பரங்கள்</string>
    <string name="enquiry">விசாரணை படிவம்</string>
    <string-array name="occupation">
        <item>விவசாயம்</item>
        <item>சுயதொழில்</item>
        <item>அரசாங்கவேலை</item>
        <item>தனியார் வேலை</item>
        <item>மற்றவை</item>
    </string-array>
    <string-array name="blood_group">
        <item>A1 -ve</item>
        <item>A1 +ve</item>
        <item>A1B -ve</item>
        <item>A1B +ve</item>
        <item>A2 -ve</item>
        <item>A2 +ve</item>
        <item>A2B -ve</item>
        <item>A2B +ve</item>
        <item>B -ve</item>
        <item>B +ve</item>
        <item>B1 +ve</item>
        <item>O -ve</item>
        <item>O+ve</item>
        <item>A+ve</item>
        <item>A-ve</item>
        <item>AB+ve</item>
        <item>AB-ve</item>
        <item>Bombay Blood Group</item>


    </string-array>
    <string name="start_recording">Record</string>
    <string name="stop_recording">Stop</string>
    <string name="audio_format">Format</string>
    <string name="choose_format_title">Choose Audio Format</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
